add final version)

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "history": "^4.10.1",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-hook-speech-to-text": "^0.6.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
+        "react-speech-recognition": "^3.8.0",
         "redux": "^4.0.5",
         "redux-logger": "^4.0.0",
         "redux-thunk": "^2.3.0"
